--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-watch": "^4.3.11"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
